<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre_de_usuario" />

        <EditText
            android:id="@+id/username_input"
            style="@style/InputEditText"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/input_bg"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_input"
            style="@style/InputEditText"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/input_bg"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_input"
            style="@style/InputEditText"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/input_bg"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/repeatPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rep_password" />

        <EditText
            android:id="@+id/repeat_passwd_input"
            style="@style/InputEditText"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@drawable/input_bg"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:padding="30px"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/registerInButton"
            style="@style/ButtonOne"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:padding="0px"
            android:text="@string/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/legal_terms" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>