<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaContactoAdmi">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/sky_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menuBanner"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="25dp"
            android:background="@color/sky_blue"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="187dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@color/sky_blue"
            android:text="@string/nombre_instituto"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/profileBanner"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil1" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewContactar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactar_con"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="173dp"
        android:textSize="17sp"
        android:paddingStart="40dp"/>

    <TextView
        android:layout_width="242dp"
        android:layout_height="36dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/email_alumno"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="206dp"
        android:textSize="17sp"
        android:backgroundTint="@color/sea_blue" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:backgroundTint="@color/sea_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/invert_arrow"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="284dp"
        android:text="@string/texto_relleno"
        android:textSize="17sp"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="275dp"
        android:backgroundTint="@color/sky_blue"
        />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/sea_blue"
        android:text="@string/enviar"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.86"
        tools:layout_editor_absoluteX="130dp" />


</androidx.constraintlayout.widget.ConstraintLayout>