<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AsistenciaInstituto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/sky_blue"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menuBanner"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="25dp"
            android:background="@color/sky_blue"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="187dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@color/sky_blue"
            android:text="@string/nombre_instituto"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/profileBanner"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectionAsist"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <Button
            android:background="@drawable/buttondos"
            style="@style/ButtonTwo"
            android:text="@string/entrada"
            android:backgroundTint="@null"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            />

        <Button
            android:background="@drawable/buttondos"
            style="@style/ButtonTwo"
            android:text="@string/salida"
            android:backgroundTint="@null"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            />

        <Button
            android:background="@drawable/buttondos"
            style="@style/ButtonTwo"
            android:text="@string/horas"
            android:backgroundTint="@null"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/graph"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectionAsist"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:backgroundTint="@color/sky_blue"
        >
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grafico_temporal"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>