<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaAlumnos">

    <EditText
        android:id="@+id/searchFriends"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/buscar"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_weight="1"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFriends" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/sky_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
        android:id="@+id/imagenAdd"
        android:background="@color/sky_blue"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/grey_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sky_blue"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            >

            <EditText
                android:id="@+id/editAlumno"
                android:layout_width="187dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@color/sky_blue"
                android:text="@string/alumno_nuevo"
                android:hint="@string/alumno_nuevo"
                />

            <EditText
                android:id="@+id/editClase"
                android:layout_width="187dp"
                android:layout_height="52dp"
                android:textColor="@color/white"
                android:background="@color/sky_blue"
                android:text="@string/clase_nueva"
                android:hint="@string/clase_nueva"
                />


        </LinearLayout>


        <Button
            android:layout_marginTop="45dp"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>