<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionarClases">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/sky_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menuBanner"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="25dp"
            android:background="@color/sky_blue"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="187dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@color/sky_blue"
            android:text="@string/nombre_instituto"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/profileBanner"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil1" />
    </LinearLayout>

    <Button
        style="@style/ButtonOne"
        android:layout_marginTop="120dp"
        android:id="@+id/button1"
        android:text="@string/a_adir_clase"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        style="@style/ButtonOne"
        android:layout_marginTop="100dp"
        android:id="@+id/button2"
        android:text="@string/editar_clases"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>